--- a/manual/Actors.tex
+++ b/manual/Actors.tex
@@ -57,7 +57,7 @@ class local_actor;
   \hline
   \lstinline^void demonitor(actor whom)^ & Removes a monitor from \lstinline^whom^ \\
   \hline
-  \lstinline^bool has_sync_failure_handler()^ & Checks wheter this actor has a user-defined sync failure handler \\
+  \lstinline^bool has_sync_failure_handler()^ & Checks whether this actor has a user-defined sync failure handler \\
   \hline
   \lstinline^template <class F>^ \lstinline^void set_exception_handler(F f)^ & Sets a custom handler for uncaught exceptions \\
   \hline
