--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -30,6 +30,10 @@
 \parindent 0pt
 \parskip 8pt
 
+\pretolerance=150
+\tolerance=500
+\hbadness=752
+
 \definecolor{blue}{rgb}{0,0,1}
 \definecolor{violet}{rgb}{0.5,0,0.5}
 
