--- a/manual/ActorManagement.tex
+++ b/manual/ActorManagement.tex
@@ -69,7 +69,11 @@ To obtain a string representation of an error code, use \lstinline^caf::exit_rea
   \hline
   \lstinline^unknown^ & 6 & Indicates that an actor has been exited and its state is no longer known \\
   \hline
+  \lstinline^out_of_workers^ & 7 & Indicates that an actor pool unexpectedly ran out of workers \\
+  \hline
   \lstinline^user_shutdown^ & 16 & Actor was killed by a user-generated event \\
+  \hline
+  \lstinline^kill^ & 17 & Unconditionally kills actors when using in an \lstinline^exit_msg^, even when trapping exits \\
   \hline
   \lstinline^remote_link_unreachable^ & 257 & Indicates that a remote actor became unreachable, e.g., due to connection error \\
   \hline
